app-aunis-conecta/build_log.txt
[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2K
transforming... 2140 modules transformed.
 Build failed in 2.95s
error during build:
Build failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token Delim('/')
373 |  .z-50 { z-index: 50; }
374 |  
375 |  .-translate-y-1/2 { transform: translateY(-50%); }
    |                 ^
376 |  
377 |  /* --- PREMIUM UI COMPONENTS --- */
    at Module.<anonymous> (C:\Users\Usuario\.gemini\antigravity\playground\conecta-aunis\app-aunis-conecta\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:21202:59)
    at async finalizeCss (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:21048:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:20587:19)
    at async plugin (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1234:16)
    at async plugin.<computed> (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/rolldown/dist/shared/bindingify-input-options-e7ze4hPR.mjs:1593:12)
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/rolldown/dist/shared/error-BLhcSyeg.mjs:18:128)
    at #build (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/rolldown/dist/shared/rolldown-build-CPrIX9V6.mjs:3313:34)
    at async buildEnvironment (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:32849:64)
    at async Object.build (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:33271:19)
    at async Object.buildApp (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/chunks/node.js:33268:153)
    at async CAC.<anonymous> (file:///C:/Users/Usuario/.gemini/antigravity/playground/conecta-aunis/app-aunis-conecta/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}
